li hover styles and js tidy up

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <title></title>
   <link rel="stylesheet" href="style.css">
 </head>
+
+<style type="text/css">
+  #my-list li {
+    cursor: pointer;
+  }
+  #my-list li:hover {
+    background-color: #ddffe5;
+
+  }
+</style>
 <body>
   <h2>Todo list</h2>
   <ul id="my-list">
